TestCases/LLVMTests/SyntaxErrorTests/tests/test27.c
int main() {
float f = 9.457889;

&f = 3217 * 54564;
return 0;
}
